[gd_scene load_steps=30 format=3 uid="uid://c3j2hpqk5l3so"]

[ext_resource type="Texture2D" uid="uid://fubswpjcq3l1" path="res://Assets/PlayerAssets/CatPlayer.png" id="1_aoxlc"]
[ext_resource type="Script" uid="uid://b3fmg5jkght8m" path="res://Nodes/player.gd" id="1_qlfej"]
[ext_resource type="Texture2D" uid="uid://bmfnrw0jgss12" path="res://Assets/PlayerAssets/CatPlayerIdle.png" id="2_pie2b"]
[ext_resource type="Texture2D" uid="uid://ch6tuixaq5tpe" path="res://Assets/PlayerAssets/CatPlayerAir.png" id="2_sfp35"]
[ext_resource type="Texture2D" uid="uid://d2sm6pwfaqdr4" path="res://Assets/PlayerAssets/CatPlayerAttack.png" id="3_hv3sw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8euyb"]
atlas = ExtResource("2_sfp35")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_axrd7"]
atlas = ExtResource("2_sfp35")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wha1n"]
atlas = ExtResource("3_hv3sw")
region = Rect2(96, 72, 96, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewvgn"]
atlas = ExtResource("3_hv3sw")
region = Rect2(192, 72, 96, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3522b"]
atlas = ExtResource("3_hv3sw")
region = Rect2(0, 168, 96, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3lat"]
atlas = ExtResource("3_hv3sw")
region = Rect2(96, 168, 96, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4dl4"]
atlas = ExtResource("3_hv3sw")
region = Rect2(192, 168, 96, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynwet"]
atlas = ExtResource("3_hv3sw")
region = Rect2(0, 72, 96, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4ynj"]
atlas = ExtResource("2_pie2b")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmu34"]
atlas = ExtResource("2_pie2b")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bouj"]
atlas = ExtResource("2_pie2b")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hphp"]
atlas = ExtResource("2_pie2b")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3gfx"]
atlas = ExtResource("2_pie2b")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5p36"]
atlas = ExtResource("2_pie2b")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5gn8"]
atlas = ExtResource("2_pie2b")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nrtn"]
atlas = ExtResource("2_pie2b")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjyf3"]
atlas = ExtResource("2_pie2b")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlfej"]
atlas = ExtResource("1_aoxlc")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pie2b"]
atlas = ExtResource("1_aoxlc")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfp35"]
atlas = ExtResource("1_aoxlc")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hv3sw"]
atlas = ExtResource("1_aoxlc")
region = Rect2(24, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_r4ynj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8euyb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axrd7")
}],
"loop": true,
"name": &"Air",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wha1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewvgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3522b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3lat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4dl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynwet")
}],
"loop": true,
"name": &"Attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4ynj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmu34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bouj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hphp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3gfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5p36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5gn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nrtn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjyf3")
}],
"loop": true,
"name": &"Idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlfej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pie2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfp35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv3sw")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aoxlc"]
size = Vector2(11, 12.2222)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sfp35"]
size = Vector2(32, 13)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_qlfej")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_r4ynj")
animation = &"Idle"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6.5)
scale = Vector2(0.9, 0.9)
shape = SubResource("RectangleShape2D_aoxlc")

[node name="JumpTime" type="Timer" parent="."]

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(21.5, 2)

[node name="AttackShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_sfp35")
disabled = true

[connection signal="area_entered" from="AttackArea" to="." method="_on_attack_area_area_entered"]
